src/tests/evaluation_error/type_mismatch_plus_infix_expression/snapshots/monkey_interpreter__tests__evaluation_error__type_mismatch_plus_infix_expression__test_type_mismatch_plus_infix_expression_case_1_lexical_analysis.snap
---
source: src/tests/evaluation_error/type_mismatch_plus_infix_expression/mod.rs
expression: tokens
---
[
    False,
    Plus,
    True,
    EndOfFile,
]
