src/tests/evaluation_error/type_mismatch_plus_infix_expression/snapshots/monkey_interpreter__tests__evaluation_error__type_mismatch_plus_infix_expression__test_type_mismatch_plus_infix_expression_case_1_syntax_analysis.snap
---
source: src/tests/evaluation_error/type_mismatch_plus_infix_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: PlusInfix {
            left_hand: Boolean {
                literal: false,
            },
            right_hand: Boolean {
                literal: true,
            },
        },
    },
]
