src/tests/evaluation_error/type_mismatch_plus_infix_expression/snapshots/monkey_interpreter__tests__evaluation_error__type_mismatch_plus_infix_expression__test_type_mismatch_plus_infix_expression_case_5_syntax_analysis.snap
---
source: src/tests/evaluation_error/type_mismatch_plus_infix_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: PlusInfix {
            left_hand: String {
                literal: "456",
            },
            right_hand: Integer {
                literal: 7,
            },
        },
    },
]
